--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html, body {
     align-items: center;
-    background: #224465;
+    background: #9153c7;
     border: 0;
     display: flex;
     font-family: Helvetica, Arial, sans-serif;
